<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="434dp"
        android:layout_height="173dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/ttl"
        style="@style/format"
        android:layout_width="205dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ttl"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/nama" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="161dp"
        android:layout_height="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/poster" />

    <TextView
        android:id="@+id/nama"
        style="@style/format"
        android:layout_marginStart="8dp"
        android:text="@string/nama"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/hobby"
        style="@style/format"
        android:layout_width="175dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hobby"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/ttl" />

    <TextView
        android:id="@+id/tentang"
        style="@style/format"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/artifika"
        android:text="@string/tentang"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster" />

    <TextView
        android:id="@+id/isibio"
        style="@style/format"
        android:layout_width="380dp"
        android:layout_height="505dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:autoLink="web"
        android:fontFamily="@font/artifika"
        android:text="@string/isibio"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tentang" />

    <ImageButton
        android:id="@+id/likebutton"
        android:layout_width="101dp"
        android:layout_height="81dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/colorAccent"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/heart" />

</androidx.constraintlayout.widget.ConstraintLayout>